# PangolinDB

./: .gitignore  CMakeLists.txt
src/: Database.cpp  Database.h  Schema.h
src/collection/: Collection.cpp  Collection.h
src/collection/schema/: Schema.cpp  Schema.h
src/collection/store/: MemoryStore.cpp  MemoryStore.h  Store.h
